aws/security-groups.tf
resource aws_security_group "security_group" {
  name   = "${var.service_name}-apache-security-group"
  vpc_id = aws_vpc.vpc.id
  description = "Internet reaching access for public"

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    security_groups = [aws_security_group.alb_security_group.id]
  }
  ingress {
    from_port     = 22
    to_port       = 22
    protocol      = "tcp"
    cidr_blocks   = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks   = ["0.0.0.0/0"]
  }
  tags = {
    Name = "bjss-Public security group"
  }
}

resource "aws_security_group" "alb_security_group" {
  name = "ELB-SG"
  description = "Allows balancing"
  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port     = 22
    to_port       = 22
    protocol      = "tcp"
    cidr_blocks   = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow web traffic to Load Balancer"
  }

  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "${var.service_name}-alb_security_group"
  }
}
